# UxPlay

./: CMakeLists.txt  README.html  README.md  README.txt  log.h  uxplay  uxplay.1  uxplay.cpp  uxplay.service  uxplay.spec
lib/: CMakeLists.txt  airplay_video.c  airplay_video.h  byteutils.c  byteutils.h  compat.c  compat.h  crypto.c  crypto.h  dnssd.c  dnssd.h  dnssdint.h  fairplay.h  fairplay_playfair.c  fcup_request.h  global.h  http_handlers.h  http_parser.c  http_parser.h  http_request.c  http_request.h  http_response.c  http_response.h  httpd.c  httpd.h  logger.c  logger.h  memalign.h  mirror_buffer.c  mirror_buffer.h  netutils.c  netutils.h  pairing.c  pairing.h  raop.c  raop.h  raop_buffer.c  raop_buffer.h  raop_handlers.h  raop_ntp.c  (+12 more)
lib/curve25519/: CMakeLists.txt  curve25519.h
lib/ed25519/: CMakeLists.txt  sha512.h
lib/llhttp/: CMakeLists.txt
lib/playfair/: CMakeLists.txt  LICENSE.md  hand_garble.c  modified_md5.c  omg_hax.c  omg_hax.h  playfair.c  playfair.h  sap_hash.c
lib/plist/: CMakeLists.txt  bplist.c  list.c  list.h  node_list.c  plist.c  ptrarray.c  ptrarray.h  xplist.c
lib/plist/plist/: plist.h
renderers/: CMakeLists.txt  audio_renderer.c  audio_renderer.h  audio_renderer_gstreamer.c  video_renderer.c  video_renderer.h  video_renderer_gstreamer.c  x_display_fix.h
